fix: update styles in contact, CV, and home sections fix: take out tooltips from layout grid to fix annoying popup bug on mobile view + tooltips appearing offseted

--- a/contact.css
+++ b/contact.css
@@ -36,7 +36,7 @@
 
 .mobile [id="I1694932088"] .backdrop {
 	order: 0;
-	height: 40rem;
+	height: 60%;
 	width: 100%;
     position: fixed;
 }
@@ -50,8 +50,9 @@
 	bottom: 0;
 	background: linear-gradient(to bottom, 
 		rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.5) 45%,
-		rgba(0,0,0,0.9) 85%,
+        rgba(0,0,0,0.70) 55%,
+        rgba(0,0,0,0.8) 65%,
+		rgba(0,0,0,0.9) 80%,
 		rgba(0,0,0,1) 100%
 	);
 	pointer-events: none;
@@ -69,10 +70,10 @@
     padding-left: 2rem;
 	padding-right: 2rem;
     padding-top: 2rem;
-    padding-bottom: 10rem;
+    padding-bottom: 1rem;
     align-items: flex-end;
 }
 
 .content-container h2 {
-	line-height: 6rem;
+	line-height: 7rem;
 }
