--- a/home.css
+++ b/home.css
@@ -11,10 +11,15 @@
 }
 
 [id="L3482832595"] .page-content {
-	padding-left: 3rem;
 	padding-top: 4.5rem;
+    padding-left: 3rem;
 	width: 100%;
 	align-items: flex-start;
+}
+
+.mobile [id="L3482832595"] .page-content {
+	padding-top: 5rem;
+    padding-left: 1.75rem;
 }
 
 [id="L3482832595"] .backdrop::after {
@@ -42,8 +47,9 @@
 	right: 0;
 	bottom: 0;
 	background: linear-gradient(to top, 
-		rgba(0,0,0,0) 0%, 
-		rgba(0,0,0,.9) 60%,
+		rgba(0,0,0,0) 0%,
+        rgba(0,0,0,.5) 25%,
+		rgba(0,0,0,.9) 50%,
 		rgba(0,0,0,1) 100%
 	);
 	pointer-events: none;
