--- a/work.css
+++ b/work.css
@@ -164,7 +164,7 @@
     background-color: #1B1821;
     padding: 1.5rem;
     padding-bottom: 5rem;
-    margin-top: -2px;
+    margin-top: -12px;
     margin-left: 2px;
     margin-right: 2px;
     margin-bottom: 2px;
